--- a/public/css/media_download.css
+++ b/public/css/media_download.css
@@ -32,6 +32,7 @@
     width: 260px;
     height: auto;
     padding: 10px;
+    position:absolute;
     display: flex;
     align-items: center;
     gap: 12px;
@@ -169,3 +170,4 @@
     width: 48px;
     height: 48px;
 }
+
